do all preps before main logic

--- a/src/alembic.ini
+++ b/src/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///./database.db
+sqlalchemy.url = postgresql://myuser:b38n4t34bitb3cb4tc3@localhost/gembowordsdb
 
 
 [post_write_hooks]
