--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,10 @@
+aiosqlite==0.20.0
 alembic==1.13.3
 annotated-types==0.7.0
 anyio==4.6.0
+async-timeout==4.0.3
+asyncpg==0.29.0
+bcrypt==4.2.0
 certifi==2024.8.30
 click==8.1.7
 dnspython==2.6.1
@@ -21,18 +25,21 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.7
+psycopg2-binary==2.9.10
 pydantic==2.9.2
 pydantic-extra-types==2.9.0
 pydantic-settings==2.5.2
 pydantic_core==2.23.4
 Pygments==2.18.0
+PyJWT==2.9.0
 python-dotenv==1.0.1
 python-multipart==0.0.12
 PyYAML==6.0.2
 rich==13.9.2
 shellingham==1.5.4
 sniffio==1.3.1
-SQLAlchemy==2.0.35
+sqladmin==0.20.0
+SQLAlchemy==2.0.36
 starlette==0.38.6
 typer==0.12.5
 typing_extensions==4.12.2
@@ -41,3 +48,4 @@ uvicorn==0.31.0
 uvloop==0.20.0
 watchfiles==0.24.0
 websockets==13.1
+WTForms==3.1.2
