--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -7,6 +7,7 @@ asyncpg==0.29.0
 bcrypt==4.2.0
 certifi==2024.8.30
 click==8.1.7
+coverage==7.6.4
 dnspython==2.6.1
 email_validator==2.2.0
 exceptiongroup==1.2.2
@@ -18,6 +19,7 @@ httpcore==1.0.6
 httptools==0.6.1
 httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
@@ -25,6 +27,8 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.7
+packaging==24.2
+pluggy==1.5.0
 psycopg2-binary==2.9.10
 pydantic==2.9.2
 pydantic-extra-types==2.9.0
@@ -32,6 +36,10 @@ pydantic-settings==2.5.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 PyJWT==2.9.0
+pytest==8.3.3
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
+pytest-mock==3.14.0
 python-dotenv==1.0.1
 python-multipart==0.0.12
 PyYAML==6.0.2
@@ -41,6 +49,7 @@ sniffio==1.3.1
 sqladmin==0.20.0
 SQLAlchemy==2.0.36
 starlette==0.38.6
+tomli==2.1.0
 typer==0.12.5
 typing_extensions==4.12.2
 ujson==5.10.0
